[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.21", features = ["std", "serde"] }
env_logger = { version = "0.11.3" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.196", features = ["derive"] }
dotenv = "0.15.0"
alloy = { version = "1.0.6", features = ["full"] }
alloy-chains = "0.2.1"
tokio-stream = "0.1.17"
reqwest = "0.12.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde_with = { version = "3.4", features = ["hex"] }
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
quickcheck = "1.0"
criterion = "0.5"
bincode = "1.3"
dashmap = "5.5"
